# ResNet

./: README.md  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
src/model/: resnet.py
