[tool.poetry]
name = "resnet"
version = "0.1.0"
description = ""
authors = ["SeoYoungDeok <dud1933@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
opencv-python = "^4.6.0.66"
datasets = "^2.7.1"
albumentations = "^1.3.0"
wandb = "^0.13.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
pytest = "^7.2.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
